--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,4 +1,7 @@
 <div class="backdrop">
   <div id="main"></div>
 </div>
+<% if current_user %>
+  <%= button_to "Log Out", action: sessions_url, method: :delete %>
+<% end %>
 <script>$(ArchiveOfOurClone.initialize);</script>
