--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -1,15 +1,53 @@
-.superclass{
-  position: absolute;
+.show-fact-box{
+  margin: 50px 20px;
 }
 
-.column-1{
+.superclass{
   position: relative;
-  left: 0;
-  top: 0;
+  margin: 10px 0 0 0;
 }
 
 .column-2{
-  position: relative;
-  left: 100px;
-  top: 0;
+  position: absolute;
+  top: 0px;
+  left: 300px;
+}
+
+section.title{
+  text-align: center;
+  margin: 50px 0 0 0;
+}
+
+div.title{
+  font-size: xx-large;
+  font-family: Georgia, serif;
+  color: #2a2a2a;
+}
+
+a.author-link{
+  text-decoration: none;
+  color: #000;
+  font-size: x-large;
+  font-weight: normal;
+  font-family: Georgia, serif;
+  color: #2a2a2a;
+}
+
+.on-top-of-line{
+  font-size: large;
+  font-family: Georgia, serif;
+}
+
+.below-line{
+  margin: 10px;
+}
+
+hr {
+  width: 100%;
+  height: 1px;
+  background: #000;
+}
+
+.summary {
+  margin: 20px 50px;
 }
