--- a/app/assets/stylesheets/used_multiple_places.css
+++ b/app/assets/stylesheets/used_multiple_places.css
@@ -1,7 +1,8 @@
 body, html {
   margin: 0;
   padding: 0;
-  color: #000;
+  color: #2a2a2a;
+  font-family: Lucida Grande;
 }
 
 #main {
@@ -18,4 +19,12 @@ body, html {
 
 .main-link {
   color: #930101;
+}
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  content: "";
+  clear: both;
+  height: 0;
 }
