--- a/app/assets/templates/searchSidebar.jst.ejs
+++ b/app/assets/templates/searchSidebar.jst.ejs
@@ -1,10 +1,21 @@
+<% var selected = function (value) {
+  if (search_default === value) {
+    return "selected"
+    }
+} %>
+
+
 <input type="submit" value="sort and filter">
 <p>
 <select name="sort_criterion">
-  <option value="updated_at">Date Updated</option>
-  <option value="created_at">Date Posted</option>
-  <option value="word_count">Word Count</option>
-  <option value="title">Title</option>
+  <option value="updated_at" <%= selected("updated_at") %>>Date Updated</option>
+  <option value="created_at" <%= selected("created_at") %>>Date Posted</option>
+  <option value="word_count" <%= selected("word_count") %>>Word Count</option>
+  <option value="title" <%= selected("title") %>>Title</option>
+  <option value="author_name" <%= selected("author_name") %>>Author</option>
 </select>
+<p>
+<label for="Author">Author</label>
+<input type="text" name="tags[author]">
 <p>
 <input type="submit" value="sort and filter">
