--- a/app/assets/templates/fandomShow.jst.ejs
+++ b/app/assets/templates/fandomShow.jst.ejs
@@ -1,16 +1,21 @@
-<%= category.category_name %>
+<header class="fandom-show"><a href="javascript:void(0)">Fandoms</a> >
+<%= category.category_name %></header>
 <% for (var i = 0; i < alphabet.length; i++) { %>
-  <div class="fandom-box">
+  <div class="show-fandom-box">
     <% var letter = alphabet[i] %>
     <%= letter %> <button class="top">Top</button>
-    <% for (var j = 0; j < category.fandom.length; j++) { %>
-      <% var fandom = category.fandom[j] %>
-      <% if (fandom.name[0] === letter) { %>
-        <a href="javascript:void(0)" class="fandom-list-name">
-          <%= fandom.name %>
-        </a>
-        (<%= fandom.story_count %>)
+    <div class= "show-smaller-fandom-box">
+      <% for (var j = 0; j < category.fandom.length; j++) { %>
+        <% var fandom = category.fandom[j] %>
+        <% if (fandom.name[0] === letter) { %>
+          <div class="show-fandom">
+          <a href="javascript:void(0)" class="fandom-list-name">
+            <%= fandom.name %>
+          </a>
+          (<%= fandom.story_count %>)
+          </div>
+        <% } %>
       <% } %>
-    <% } %>
+    </div>
   </div>
 <% } %>
