--- a/app/assets/templates/storyIndex.jst.ejs
+++ b/app/assets/templates/storyIndex.jst.ejs
@@ -1,2 +1,6 @@
+<header>
+  <%= collection.length %> Works in <%= collection.topTag %>
+  <button class="previous">Previous</button><button class="next">Next</button>
+</header>
 <div class="story-index"></div>
 <section class="search"></div>
