--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -18,9 +18,7 @@ section.title{
   margin: 50px 0 0 0;
 }
 
-div.title{
-  font-size: xx-large;
-  font-family: Georgia, serif;
+header.title{
   color: #2a2a2a;
 }
 
@@ -42,7 +40,7 @@ a.author-link{
   margin: 10px;
 }
 
-hr {
+hr.story {
   width: 100%;
   height: 1px;
   background: #000;
