--- a/app/assets/templates/storyForm.jst.ejs
+++ b/app/assets/templates/storyForm.jst.ejs
@@ -23,15 +23,15 @@
     </div>
 
     <% var selected = function (type, value) {
-      if (story.get(type) === value) {
-        return "selected";
+        if (story.get(type) && story.get(type)[0] === value) {
+          return "selected"
         }
     } %>
 
     <% var checked = function (value) {
       checked_warnings = [];
       _(story.get("Warnings")).each(function(tag){
-        checked_warnings.push(tag.div);
+        checked_warnings.push(tag);
       });
       if (checked_warnings.indexOf(value) > -1) {
         return "checked";
@@ -53,31 +53,31 @@
       <div class="warning">Warnings</div>
       <div class="warning-item">
         <input type="checkbox" value="Creator Chose Not To Use Archive Warnings"
-          name="story[warnings]" id="chose_not_to" <%= checked("Creator Chose Not To Use Archive Warnings") %>>
+          name="story[warnings][]" id="chose_not_to" <%= checked("Creator Chose Not To Use Archive Warnings") %>>
         <div class="chose_not_to">Creator Chose Not To Use Archive Warnings</div>
       </div>
       <div class="warning-item">
-        <input type="checkbox" value="No Archive Warnings Apply" name="story[warnings]"
+        <input type="checkbox" value="No Archive Warnings Apply" name="story[warnings][]"
           id="none_apply" <%= checked("No Archive Warnings Apply") %>>
         <div class="none_apply">No Archive Warnings Apply</div>
       </div>
       <div class="warning-item">
         <input type="checkbox" value="Graphic Depictions of Violence"
-          name="story[warnings]" id="violence" <%= checked("Graphic Depictions of Violence") %>>
+          name="story[warnings][]" id="violence" <%= checked("Graphic Depictions of Violence") %>>
         <div class="violence">Graphic Depictions of Violence</div>
       </div>
       <div class="warning-item">
-        <input type="checkbox" value="Major Character Death" name="story[warnings]"
+        <input type="checkbox" value="Major Character Death" name="story[warnings][]"
           id="death" <%= checked("Major Character Death") %>>
         <div class="death">Major Character Death</div>
       </div>
       <div class="warning-item">
-        <input type="checkbox" value="Rape"" name="story[warnings]" id="rape"
+        <input type="checkbox" value="Rape"" name="story[warnings][]" id="rape"
           <%= checked("Rape") %>>
         <div class="rape">Rape</div>
       </div>
       <div class="warning-item">
-        <input type="checkbox" value="Underage" name="story[warnings]" id="warning"
+        <input type="checkbox" value="Underage" name="story[warnings][]" id="warning"
           <%= checked("Underage") %>>
         <div class="underage">Underage</div>
       </div>
@@ -97,32 +97,30 @@
 
     <% var tags = function(type){
       var tags = ""
-      _(story.tags).each = function(tag) {
-        if (tag.category === type) {
-          value = tag.div
+      _(story.get(type)).each(function(tag) {
+          value = tag
           var button = "<button class='tag-delete' data-id ='" + value + "'>X</button>"
           var tag = "<div class='" + value + "'>" + button + value + ", </div>"
           tags = tags + tag
-        }
-      }
+        })
       return tags
     } %>
 
     <div class="item">
-      <div id="characters"><%= tags("Characters") %></div>
       <div class="characters">Characters</div>
+      <div class="tags-div" id="characters"><%= tags("Characters") %></div>
       <input type="text" id="characters" name="story[characters]" class="freeform-tags">
     </div>
 
     <div class="item">
-      <div id="relationships"><%= tags("Relationships") %></div>
       <div class="relationships">Relationships</div>
+      <div class="tags-div" id="relationships"><%= tags("Relationships") %></div>
       <input type="text" id="relationships" name="story[relationships]" class="freeform-tags">
     </div>
 
     <div class="item">
-      <div id="additional"><%= tags("Additional") %></div>
       <div class="additional">Additional Tags</div>
+      <div class="tags-div" id="additional"><%= tags("Additional") %></div>
       <input type="text" id="additional" name="story[additional]" class="freeform-tags">
     </div>
 
@@ -138,8 +136,9 @@
 
     <div class="item">
       <div class="story">Story Text</div>
-      <textarea id="story" name="story[text]" rows="1000" cols="50"><%= story.get("text") %></textarea>
-      <input type="filepicker" data-fp-mimetypes="text/*,application/msword" name="story[text]" data-fp-button-text="Upload A File">
+      <textarea id="story" name="story[text][]" rows="1000" cols="50"><%= story.get("text") %></textarea>
+      <input type="filepicker" data-fp-mimetypes="text/*"
+      data-fp-container="modal" onchange="alert(event.fpfile.url)" id="filepicker-text">
     </div>
 
     <input type="submit" value="Submit" class="submit">
