--- a/app/assets/templates/fandomShow.jst.ejs
+++ b/app/assets/templates/fandomShow.jst.ejs
@@ -1,4 +1,4 @@
-<header class="fandom-show"><a href="javascript:void(0)">Fandoms</a> >
+<header class="fandom-show"><a href="javascript:void(0)" class='fandom-index-link'>Fandoms</a> >
 <%= category.category_name %></header>
 <% for (var i = 0; i < alphabet.length; i++) { %>
   <div class="show-fandom-box">
@@ -19,4 +19,3 @@
     </div>
   </div>
 <% } %>
-<button class="all-genres">All Genres</button>
