--- a/app/assets/templates/searchSidebar.jst.ejs
+++ b/app/assets/templates/searchSidebar.jst.ejs
@@ -65,23 +65,15 @@
     id="death">
   <div class="death">Major Character Death</div>
 </div>
-<div class="warning-item">
-  <input type="checkbox" value="Rape"" name="tags[Warnings][]" id="rape">
-  <div class="rape">Rape</div>
-</div>
-<div class="warning-item">
-  <input type="checkbox" value="Underage" name="tags[Warnings][]" id="warning">
-  <div class="underage">Underage</div>
-</div>
 
 <label for="Categories">Categories</label><br />
 <input type="radio" name="tags[Categories][]" value="all">All Categories
-<input type="radio" name="tags[Categories][]">Gen
-<input type="radio" name="tags[Categories][]">Female/Female
-<input type="radio" name="tags[Categories][]>Male/Male
-<input type="radio" name="tags[Categories][]>Female/Male
-<input type="radio" name="tags[Categories][]>Other
-<input type="radio" name="tags[Categories][]>Multi
+<input type="radio" name="tags[Categories][]">British
+<input type="radio" name="tags[Categories][]">American
+<input type="radio" name="tags[Categories][]">Russian
+<input type="radio" name="tags[Categories][]">French
+<input type="radio" name="tags[Categories][]">German
+<input type="radio" name="tags[Categories][]">Other
 
 <label for="Characters">Characters</label><br />
 <%= tagField("Characters") %>
