homepage and nav

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,4 +1,5 @@
 <div class="backdrop">
+  <div id="navbar"></div>
   <div id="main"></div>
 </div>
 <script>$(ArchiveOfOurClone.initialize);</script>
